--- a/crypto-challenges.cabal
+++ b/crypto-challenges.cabal
@@ -16,7 +16,11 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       base >= 4.7 && < 5,
+                       vector,
+                       base16-bytestring,
+                       base64-bytestring,
+                       bytestring
   default-language:    Haskell2010
 
 benchmark crypto-benchmarks
