--- a/crypto-challenges.cabal
+++ b/crypto-challenges.cabal
@@ -20,6 +20,7 @@ library
                        vector,
                        base16-bytestring,
                        base64-bytestring,
+                       word8,
                        bytestring
   default-language:    Haskell2010
 
