--- a/crypto-challenges.cabal
+++ b/crypto-challenges.cabal
@@ -30,7 +30,7 @@ benchmark crypto-benchmarks
                        criterion
   default-language:    Haskell2010
   ghc-options:         -Wall -O2
-  
+
   hs-source-dirs:      benchmarks
   main-is:             Benchmarks.hs
   type:                exitcode-stdio-1.0
@@ -41,6 +41,9 @@ test-suite crypto-challenges-test
   main-is:             Spec.hs
   build-depends:       base
                      , crypto-challenges
+                     , bytestring
+                     , tasty
+                     , tasty-hunit
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
