--- a/crypto-challenges.cabal
+++ b/crypto-challenges.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Lib, Inputs
   build-depends:       base >= 4.7 && < 5,
                        vector,
                        base16-bytestring,
@@ -27,7 +27,10 @@ library
 benchmark crypto-benchmarks
   build-depends:       base,
                        crypto-challenges,
-                       criterion
+                       criterion,
+                       bytestring,
+                       base16-bytestring,
+                       base64-bytestring
   default-language:    Haskell2010
   ghc-options:         -Wall -O2
 
